force-app/main/default/objects/case__c/case__c.object-meta.xml
<CustomObject>
    <label>CASE</label>
    <nameField>
        <displayFormat>CS-{000000}</displayFormat>
        <label>Case Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cases</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>