force-app/main/default/objects/case__c/fields/ContactEmail__c.field-meta.xml
<CustomField>
    <fullName>ContactEmail__c</fullName>
    <label>Contact Email</label>
    <type>Email</type>
</CustomField>