force-app/main/default/objects/case__c/fields/EntitlementId__c.field-meta.xml
<CustomField>
    <fullName>EntitlementId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Entitlement Name</label>
    <referenceTo>Entitlement</referenceTo>
    <relationshipName>case</relationshipName>
    <type>Lookup</type>
</CustomField>