force-app/main/default/objects/case__c/fields/ISCLOSED__c.field-meta.xml
<CustomField>
    <fullName>ISCLOSED__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ISCLOSED</label>
    <type>Checkbox</type>
</CustomField>