force-app/main/default/objects/case__c/fields/LASTMODIFIEDDATE__c.field-meta.xml
<CustomField>
    <fullName>LASTMODIFIEDDATE__c</fullName>
    <label>LASTMODIFIEDDATE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>