force-app/main/default/objects/case__c/fields/LASTREFERENCEDDATE__c.field-meta.xml
<CustomField>
    <fullName>LASTREFERENCEDDATE__c</fullName>
    <label>LASTREFERENCEDDATE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>