force-app/main/default/objects/case__c/fields/LASTVIEWEDDATE__c.field-meta.xml
<CustomField>
    <fullName>LASTVIEWEDDATE__c</fullName>
    <label>LASTVIEWEDDATE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>