force-app/main/default/objects/case__c/fields/MASTERRECORDID__c.field-meta.xml
<CustomField>
    <fullName>MASTERRECORDID__c</fullName>
    <label>MASTERRECORDID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>