force-app/main/default/objects/case__c/fields/ParenId__c.field-meta.xml
<CustomField>
    <fullName>ParenId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Case</label>
    <referenceTo>case__c</referenceTo>
    <relationshipName>case</relationshipName>
    <type>Lookup</type>
</CustomField>