force-app/main/default/objects/case__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <label>Product</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>GC1040</fullName>
            </value>
            <value>
                <fullName>GC1060</fullName>
            </value>
            <value>
                <fullName>GC3020</fullName>
            </value>
            <value>
                <fullName>GC3040</fullName>
            </value>
            <value>
                <fullName>GC3060</fullName>
            </value>
            <value>
                <fullName>GC5020</fullName>
            </value>
            <value>
                <fullName>GC5040</fullName>
            </value>
            <value>
                <fullName>GC5060</fullName>
            </value>
            <value>
                <fullName>GC1020</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>