force-app/main/default/objects/case__c/fields/RECORDTYPEID__c.field-meta.xml
<CustomField>
    <fullName>RECORDTYPEID__c</fullName>
    <label>RECORDTYPEID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>