force-app/main/default/objects/case__c/fields/Sales_Request_s_Phone__c.field-meta.xml
<CustomField>
    <fullName>Sales_Request_s_Phone__c</fullName>
    <formula>Owner:User.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Request&apos;s Phone</label>
    <type>Text</type>
</CustomField>