force-app/main/default/objects/case__c/fields/Sales_Request_s_Role__c.field-meta.xml
<CustomField>
    <fullName>Sales_Request_s_Role__c</fullName>
    <formula>TEXT( Owner:User.Role__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Request&apos;s Role</label>
    <type>Text</type>
</CustomField>