force-app/main/default/objects/case__c/fields/Sales_Request_s_Title__c.field-meta.xml
<CustomField>
    <fullName>Sales_Request_s_Title__c</fullName>
    <formula>Owner:User.Title</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Request&apos;s Title</label>
    <type>Text</type>
</CustomField>