force-app/main/default/objects/case__c/fields/Service_Type__c.field-meta.xml
<CustomField>
    <fullName>Service_Type__c</fullName>
    <label>Service Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CONTAINER FEE</fullName>
            </value>
            <value>
                <fullName>CUSTOMS</fullName>
            </value>
            <value>
                <fullName>EXPRESS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>