force-app/main/default/objects/case__c/fields/Service_Type_Original__c.field-meta.xml
<CustomField>
    <fullName>Service_Type_Original__c</fullName>
    <formula>text(Service_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service Type(Original)</label>
    <type>Text</type>
</CustomField>