force-app/main/default/objects/case__c/fields/SHIPMENT_TERM_C__c.field-meta.xml
<CustomField>
    <fullName>SHIPMENT_TERM_C__c</fullName>
    <label>Shipment Term</label>
    <length>255</length>
    <type>Text</type>
</CustomField>