force-app/main/default/objects/case__c/fields/Shipment_Term_c_c__c.field-meta.xml
<CustomField>
    <fullName>Shipment_Term_c_c__c</fullName>
    <label>Shipment Term.</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>FCL</fullName>
            </value>
            <value>
                <fullName>LCL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>