force-app/main/default/objects/case__c/fields/SlaExitDate__c.field-meta.xml
<CustomField>
    <fullName>SlaExitDate__c</fullName>
    <label>Entitlement Process End Time</label>
    <type>DateTime</type>
</CustomField>