force-app/main/default/objects/case__c/fields/SOLUTION_C__c.field-meta.xml
<CustomField>
    <fullName>SOLUTION_C__c</fullName>
    <label>Solution</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>