force-app/main/default/objects/case__c/fields/SUBJECT__c.field-meta.xml
<CustomField>
    <fullName>SUBJECT__c</fullName>
    <label>Subject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>