force-app/main/default/objects/case__c/fields/SUPPLIEDCOMPANY__c.field-meta.xml
<CustomField>
    <fullName>SUPPLIEDCOMPANY__c</fullName>
    <label>Web Company</label>
    <length>255</length>
    <type>Text</type>
</CustomField>