force-app/main/default/objects/case__c/fields/SUPPLIEDEMAIL__c.field-meta.xml
<CustomField>
    <fullName>SUPPLIEDEMAIL__c</fullName>
    <label>Web Email</label>
    <type>Email</type>
</CustomField>