force-app/main/default/objects/case__c/fields/SUPPLIEDNAME__c.field-meta.xml
<CustomField>
    <fullName>SUPPLIEDNAME__c</fullName>
    <label>Web Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>