force-app/main/default/objects/case__c/fields/SUPPLIEDPHONE__c.field-meta.xml
<CustomField>
    <fullName>SUPPLIEDPHONE__c</fullName>
    <label>Web Phone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>