force-app/main/default/objects/case__c/fields/SYSTEMMODSTAMP__c.field-meta.xml
<CustomField>
    <fullName>SYSTEMMODSTAMP__c</fullName>
    <label>SYSTEMMODSTAMP</label>
    <length>255</length>
    <type>Text</type>
</CustomField>