force-app/main/default/objects/case__c/fields/TITLE_C__c.field-meta.xml
<CustomField>
    <fullName>TITLE_C__c</fullName>
    <label>Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>