force-app/main/default/objects/case__c/fields/Tranportation_Way__c.field-meta.xml
<CustomField>
    <fullName>Tranportation_Way__c</fullName>
    <label>Tranportation Way</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SEA</fullName>
                <default>true</default>
                <label>SEA</label>
            </value>
            <value>
                <fullName>AIR</fullName>
            </value>
            <value>
                <fullName>TRUCKING</fullName>
            </value>
            <value>
                <fullName>RAIL</fullName>
            </value>
            <value>
                <fullName>INLAND WATERWAY</fullName>
            </value>
            <value>
                <fullName>MULTIMODAL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>