force-app/main/default/objects/case__c/fields/Trucking__c.field-meta.xml
<CustomField>
    <fullName>Trucking__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Trucking</label>
    <referenceTo>Transportation__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>