force-app/main/default/objects/case__c/fields/TYPE__c.field-meta.xml
<CustomField>
    <fullName>TYPE__c</fullName>
    <label>TYPE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>