force-app/main/default/objects/case__c/fields/Type_of_Trade__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Trade__c</fullName>
    <label>Type of Trade</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DOMESTIC</fullName>
            </value>
            <value>
                <fullName>IMPORT</fullName>
            </value>
            <value>
                <fullName>EXPORT</fullName>
            </value>
            <value>
                <fullName>ENTREPOT</fullName>
            </value>
            <value>
                <fullName>THIRD COUNTRY</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>