force-app/main/default/objects/case__c/fields/VOLUMN_TEUS_C__c.field-meta.xml
<CustomField>
    <fullName>VOLUMN_TEUS_C__c</fullName>
    <label>Volumn Teus</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>