force-app/main/default/objects/case__c/recordTypes/Case_Sales.recordType-meta.xml
<RecordType>
    <fullName>Case_Sales</fullName>
    <active>true</active>
    <label>Case Sales</label>
</RecordType>