force-app/main/default/objects/case__c/recordTypes/Join_Sales.recordType-meta.xml
<RecordType>
    <fullName>Join_Sales</fullName>
    <active>true</active>
    <label>Join Sales</label>
</RecordType>