force-app/main/default/objects/case__c/recordTypes/Operation.recordType-meta.xml
<RecordType>
    <fullName>Operation</fullName>
    <active>true</active>
    <label>Operation</label>
</RecordType>