force-app/main/default/objects/case__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ClosedDate__c</columns>
    <columns>Comments__c</columns>
    <columns>Company_Address__c</columns>
    <columns>ContactEmail__c</columns>
    <columns>ContactFax__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>